--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.layout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.card {
+  display: inline-block;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #dadada;
 }
 
 code {
@@ -48,7 +63,8 @@ code {
 
 .menu-container {
   display: flex;
-  overflow: hidden; /* Para ocultar el desbordamiento del contenido */
+  overflow: hidden;
+  /* Para ocultar el desbordamiento del contenido */
 }
 
 .sidebar {
@@ -89,7 +105,8 @@ code {
   flex-grow: 1;
   padding: 20px;
   background-color: #f4f4f4;
-  overflow-y: auto; /* Permitir desplazamiento vertical en el contenido */
+  overflow-y: auto;
+  /* Permitir desplazamiento vertical en el contenido */
 }
 
 .menu-hidden .sidebar {
@@ -104,15 +121,19 @@ code {
 }
 
 .calendar-container {
-  width: 100%; /* El calendario ocupará todo el ancho disponible */
-  max-width: 600px; /* Establece un ancho máximo para evitar que el calendario abarque toda la pantalla */
-  margin: 20px auto; /* Centra el calendario horizontalmente */
+  width: 100%;
+  /* El calendario ocupará todo el ancho disponible */
+  max-width: 600px;
+  /* Establece un ancho máximo para evitar que el calendario abarque toda la pantalla */
+  margin: 20px auto;
+  /* Centra el calendario horizontalmente */
 }
 
 /* Estilos para hacer que el calendario sea más pequeño en dispositivos pequeños */
 @media (max-width: 768px) {
   .calendar-container {
-    max-width: 400px; /* Reduce el ancho máximo en dispositivos pequeños */
+    max-width: 400px;
+    /* Reduce el ancho máximo en dispositivos pequeños */
   }
 }
 
@@ -124,9 +145,11 @@ code {
   margin: 40px auto;
   text-align: center;
 }
+
 button {
   margin: 20px;
 }
+
 .custom-btn {
   width: 130px;
   height: 40px;
@@ -140,78 +163,91 @@ button {
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+    7px 7px 20px 0px rgba(0, 0, 0, .1),
+    4px 4px 5px 0px rgba(0, 0, 0, .1);
   outline: none;
 }
 
 .btn-3 {
-  background: rgb(0,172,238);
-background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  background: rgb(0, 172, 238);
+  background: linear-gradient(0deg, rgba(0, 172, 238, 1) 0%, rgba(2, 126, 251, 1) 100%);
   width: 130px;
   height: 40px;
   line-height: 42px;
   padding: 0;
   border: none;
-  
+
 }
+
 .btn-3 span {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .btn-3:before,
 .btn-3:after {
   position: absolute;
   content: "";
   right: 0;
   top: 0;
-   background: rgba(2,126,251,1);
+  background: rgba(2, 126, 251, 1);
   transition: all 0.3s ease;
 }
+
 .btn-3:before {
   height: 0%;
   width: 2px;
 }
+
 .btn-3:after {
   width: 0%;
   height: 2px;
 }
-.btn-3:hover{
-   background: transparent;
+
+.btn-3:hover {
+  background: transparent;
   box-shadow: none;
 }
+
 .btn-3:hover:before {
   height: 100%;
 }
+
 .btn-3:hover:after {
   width: 100%;
 }
-.btn-3 span:hover{
-   color: rgba(2,126,251,1);
+
+.btn-3 span:hover {
+  color: rgba(2, 126, 251, 1);
 }
+
 .btn-3 span:before,
 .btn-3 span:after {
   position: absolute;
   content: "";
   left: 0;
   bottom: 0;
-   background: rgba(2,126,251,1);
+  background: rgba(2, 126, 251, 1);
   transition: all 0.3s ease;
 }
+
 .btn-3 span:before {
   width: 2px;
   height: 0%;
 }
+
 .btn-3 span:after {
   width: 0%;
   height: 2px;
 }
+
 .btn-3 span:hover:before {
   height: 100%;
 }
+
 .btn-3 span:hover:after {
   width: 100%;
 }
