--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 
 .col-md-6 {
   flex: 0 0 50%;
-  max-width: 50%;
+  
   padding: 15px;
   box-sizing: border-box;
   
@@ -81,7 +81,7 @@ li p {
   color: #666;
 }
 
-.card {
+.card-compra {
   background: #fff;
   
   
@@ -92,7 +92,7 @@ li p {
   box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Sombra suave para añadir profundidad */
 }
 
-.card-body {
+.card-compra-body {
   margin: 0 auto;
   
 }
