--- a/src/index.css
+++ b/src/index.css
@@ -382,6 +382,8 @@ code {
   background-color: #ffcc80; /* Amarillo claro */
 }
 
+/***************************************************************/
+
 .calendar-container {
   width: 100%;
   /* El calendario ocupará todo el ancho disponible */
