--- a/src/index.css
+++ b/src/index.css
@@ -235,7 +235,7 @@ li p {
 
 .modal {
   background: white;
-  position: absolute;
+  position: fixed; /* Cambiado a fixed para asegurar que la modal esté centrada en la ventana del navegador */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -244,6 +244,7 @@ li p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
+
 
 @media only screen and (max-width: 768px) {
   .layout {
